--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -4,12 +4,13 @@
     {{pageTitle}}
   </div>
 
-  <div class="card-body" *ngIf="products?.length">
+  <div class="card-body"
+       *ngIf="products?.length">
     <div class="list-group">
       <button class="list-group-item list-group-item-action rounded-0"
-          *ngFor="let product of products"
-          [ngClass]="{'active': product?.id === selectedProduct?.id}"
-          (click)="productSelected(product)">{{ product.productName }}
+              *ngFor="let product of products"
+              [ngClass]="{'active': product?.id === selectedProduct?.id}"
+              (click)="productSelected(product)">{{ product.productName }}
         <ng-container *ngIf="displayCode">
           ({{ product.productCode }})
         </ng-container>
@@ -23,19 +24,21 @@
         <label>
           <input class="form-check-input"
                  type="checkbox"
-                 (change)="checkChanged($event.target.checked)"
+                 (change)="checkChanged()"
                  [checked]="displayCode">
           Display Product Code
         </label>
       </div>
       <div class="col-md-4 text-right">
-        <button class="btn btn-primary" (click)="newProduct()">
+        <button class="btn btn-primary"
+                (click)="newProduct()">
           Add
         </button>
       </div>
     </div>
   </div>
 </div>
-<div *ngIf="errorMessage" class="alert alert-danger">
+<div *ngIf="errorMessage"
+     class="alert alert-danger">
   Error: {{ errorMessage }}
 </div>
