--- a/src/app/products/product-shell/product-shell.component.html
+++ b/src/app/products/product-shell/product-shell.component.html
@@ -1,6 +1,14 @@
 <div class='row'>
   <div class='col-md-4'>
-    <pm-product-list></pm-product-list>
+    <pm-product-list
+      [displayCode]="displayCode$ | async"
+      [products]="products$ | async"
+      [selectedProduct]="selectedProduct$ | async"
+      [errorMessage]="errorMessage$ | async"
+      (displayCodeChanged)="checkChanged()"
+      (initializeNewProduct)="newProduct()"
+      (productWasSelected)="productSelected($any($event))"
+    ></pm-product-list>
   </div>
   <div class='col-md-8'>
     <pm-product-edit></pm-product-edit>
